minLengCompiler/src/CompiladorClases_Completo.jj
/**
 * Especificación JavaCC para la Práctica 2 (Procesadores de Lenguajes)
 * Javier Fabra - jfabra@unizar.es
 * v1.2 - 2021/03/08
 */
options
{
  static = true;
  ignore_case = true;
}

PARSER_BEGIN(CompiladorClases)

public class CompiladorClases
{
  public static void main(String args []) throws ParseException
  {
    CompiladorClases parser = new CompiladorClases(System.in);
    System.out.println("Leyendo de la entrada estándar...");
    try { 
    	CompiladorClases.programa();
    	System.out.println("Analizado correctamente");
    }
    catch (TokenMgrError e) {
		//Error léxico
		System.out.println("Error lexico");
	}
	catch (ParseException e) {
		//Error sintáctico
		System.out.println("Error sintactico");
  	}
  	catch (Error e) { 
        System.out.println("Se ha producido un error inesperado");
        System.out.println(e.getMessage());
	}
  }
}

PARSER_END(CompiladorClases)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
| <"%" (~["\n"])* ("\n")>
| <"%%" (~["%"])* "%%"> 
}

/*TOKEN: COMENTARIOS
{
  	<tCOMCORTO : "%">
	{
	  System.out.println("COMCORTO");
	}
|	<tCOMLARGO : "%%">
	{
	  System.out.println("COMLARGO");
	}
}
*/

TOKEN : /* PALABRAS RESERVADAS */
{
	<tPROGRAMA : "programa">
	{
	  System.out.println("programa");
	}
|	<tVAR : "var">
	{
	  System.out.println("var");
	}
|	<tPRINCIPIO : "principio">
	{
	  System.out.println("principio");
	}
|	<tFIN : "fin">
	{
	  System.out.println("fin");
	}
|	<tSI : "si">
	{
	  System.out.println("si");
	}
|	<tENT : "ent">
	{
	  System.out.println("ent");
	}
|	<tSI_NO : "si_no">
	{
	  System.out.println("si_no");
	}
|	<tFSI : "fsi">
	{
	  System.out.println("fsi");
	}
|	<tMQ : "mq"> 
	{
	  System.out.println("mq");
	}
|	<tFMQ : "fmq">
	{
	  System.out.println("fmq");
	}
|	<tVAL : "val">
	{
	  System.out.println("val");
	}
|	<tREF : "ref">
	{
	  System.out.println("ref");
	}
|	<tACCION : "accion">
	{
	  System.out.println("accion");
	}
  
}

TOKEN: /* OPERADORES DE FLUJO */
{
	<tFIN_SENTENCIA : ";" >
 	{
    	System.out.println("FIN_SENTENCIA");
 	}
| 	<tSEPARADOR : "," >
 	{
    	System.out.println("SEPARADOR");
 	}
}

TOKEN : /* OPERADORES ARITMETICOS */
{
	<tSUMA : "+" >
 	{
    	System.out.println("SUMA");
 	}
| 	<tRESTA : "-" >
 	{
    	System.out.println("RESTA");
 	}
 | 	<tDIV : "/" >
 	{
    	System.out.println("DIVISION");
 	}
 | 	<tMULT : "*" >
 	{
    	System.out.println("MULT");
 	}
}

TOKEN : /* TIPOS DE DATOS */
{
	<tENTERO : "entero">
	{
	  System.out.println("entero");
	}
|	<tBOOLEANO : "booleano">
	{
	  System.out.println("booleano");
	}
|	<tCARACTER : "caracter">
	{
	  System.out.println("caracter");
	}
}

TOKEN : /* OPERADORES BOOLEANOS */
{
	<tAND : "and">
	{
	  System.out.println("and");
	}
|	<tOR : "or">
	{
	  System.out.println("or");
	}
|	<tNOT : "not">
	{
	  System.out.println("not");
	}
|	<tMAYOR : ">">
	{
	  System.out.println(" >");
	}
|	<tMENOR : "<">
	{
	  System.out.println("<");
	}
|	<tIGUAL : "=">
	{
	  System.out.println("=");
	}
|	<tMAI : ">=">
	{
	  System.out.println(">=");
	}
|	<tMEI : "<=">
	{
	  System.out.println("<=");
	}
|	<tNI : "<>">
	{
	  System.out.println("<>");
	}
|	<tOPAS : ":=">
	{
	  System.out.println(":=");
	}
|	<tMOD : "mod">
	{
	  System.out.println("mod");
	}
}

TOKEN: /* OPERADORES ENTRADA/SALIDA */
{
	<tESCRIBIR : "escribir">
	{
	  System.out.println("escribir");
	}
|	<tLEER : "leer">
	{
	  System.out.println("leer");
	}
}

TOKEN : /* OPERADORES CARACTERES */
{
	<tENTACAR : "entacar">
	{
	  System.out.println("entacar");
	}
|	<tCARAENT : "caraent">
	{
	  System.out.println("caraent");
	}
}

TOKEN : /* VALORES */
{
  	<#DIGITO : ["0"-"9"]>
| 	<#LETRA : ["a"-"z"]>
| 	<#SIGNO : [":", ",","?","¿","=","[","]","{","}","(",")","<",">", "'","\"","=",",",".",",",";"," ", "/"] >
        
| 	< tVALOR_ENTERO : ("-")?(< DIGITO >)+ >
  	{
    	System.out.println("VALOR_ENTERO (Valor: " + matchedToken + ")"); 
  	}
| 	<tVALOR_DECIMAL : ("-")?(< DIGITO >)+"."(< DIGITO >)+ >
  	{
   		System.out.println("VALOR_DECIMAL (Valor: " + matchedToken + ")");
  	}
|	<tTRUE : "true">
	{
	  System.out.println("true");
	}
|	<tFALSE : "false">
	{
	  System.out.println("false");
	} 
| 	<tIDENTIFICADOR : ((< LETRA > | ("_")+(< DIGITO > | < LETRA >))(< DIGITO >)*)+ >
  	{
    	System.out.println("IDENTIFICADOR (Valor: " + matchedToken + ")");
  	}
/*| 	<tCONSTENTERA : (< DIGITO >)+ "\"">
  	{
    	System.out.println("IDENTIFICADOR (Valor: " + matchedToken + ")");
  	}
*/
| 	<tCONSTCHAR : "\"" < LETRA > "\"" >
  	{
    	System.out.println("CARACTER (Valor: " + matchedToken + ")");
  	}
| 	<tCONSTCAD : "\"" (< DIGITO > | < LETRA > | < SIGNO >)+  "\"" >
  	{
    	System.out.println("CADENA (Valor: " + matchedToken + ")");
  	}
}


TOKEN : /* AGRUPACIONES */
{
  <tPAR_IZQ : "(">
  {
    System.out.println("PAR_IZQ");
  }
| <tPAR_DER : ")">
  {
    System.out.println("PAR_DCHA");
  }
} 
// ANALIZADOR SINTACTICO

/**
*	En la parte superior de cada funcion se ha puesto
*	la notacion de la regla en BNF por si sirve de ayuda
*/


//programa ::= <tPROGRAMA> <tIDENTIFICADOR> ";" declaracion_variables declaracion_acciones bloque_sentencias
void programa():
{
  Token t = null;
}
{
 	<tPROGRAMA> t = <tIDENTIFICADOR>
	{
	  System.out.println("Identificador del programa: " + t.image);
	}
 	";" declaracion_variables() declaracion_acciones() bloque_sentencias()
}

//declaracion_variables ::= ( declaracion ";" )*
void declaracion_variables():
{
}
{
	(declaracion() ";")*
}

//declaracion ::= tipo_variables identificadores
void declaracion():
{
}
{
	tipo_variables() identificadores()
}

//tipo_variables ::= <tENTERO> | <tCARACTER> | <tBOOLEANO>
void tipo_variables():
{
}
{
	<tENTERO> | <tCARACTER> | <tBOOLEANO>
}

//identificadores ::= <tIDENTIFICADOR> ( "," <tIDENTIFICADOR> )*
void identificadores():
{
}
{
	<tIDENTIFICADOR> ( "," <tIDENTIFICADOR> )*
}

//declaracion_acciones ::= ( declaracion_accion )*
void declaracion_acciones():
{
}
{
	( declaracion_accion() )*
}

//declaracion_accion ::= cabecera_accion ";" declaracion_variables declaracion_acciones bloque_sentencias
void declaracion_accion():
{
}
{
	cabecera_accion() ";" declaracion_variables() declaracion_acciones() bloque_sentencias()
}

//cabecera_accion ::= <tACCION> <tIDENTIFICADOR> parametros_formales
void cabecera_accion():
{
}
{
	<tACCION> <tIDENTIFICADOR> parametros_formales()
}

//parametros_formales ::= ...
void parametros_formales():
{
}
{
	("(" parametros() (";" parametros())* ")")? 
}

//lista_parametros ::= (< tIDENTIFICADOR > ",")* < tIDENTIFICADOR >
void lista_parametros():
{
}
{ 
	<tIDENTIFICADOR> ("," <tIDENTIFICADOR>)* 
}

//parametros ::= clase_parametros tipo_variables lista_parametros
void parametros():
{
}
{
	clase_parametros() tipo_variables() lista_parametros()
}

//clase_parametros ::= <tVAL> | <tREF>
void clase_parametros():
{
}
{
	<tVAL> | <tREF>
}

//bloque_sentencias ::= <tPRINCIPIO> lista_sentencias <tFIN>
void bloque_sentencias():
{
}
{
	<tPRINCIPIO> lista_sentencias() <tFIN>  
}

//lista_sentencias	 ::= (sentencia())+
void lista_sentencias():
{
}
{
	//RELLENADO AARON
	(sentencia())+
	
}

//sentencia ::= leer ";" | escribir ";" | asignacion | invocacion_accion | seleccion | mientras_que
void sentencia():
{
}
{
	leer() ";"
| 	escribir() ";"
| 	<tIDENTIFICADOR> (asignacion() | invocacion_accion())
| 	seleccion()
| 	mientras_que()
}

//leer ::= <tLEER> "(" lista_asignables ")"
void leer():
{
}
{
	<tLEER> "(" lista_asignables() ")"
}

//lista_asignables ::= lista_parameteros()
void lista_asignables():
{
}
{
 	//RELLENADO AARON
 	lista_parametros()
}

//escribir ::= <tESCRIBIR> "(" lista_escribibles ")"
void escribir():
{
}
{
	<tESCRIBIR> "(" lista_escribibles() ")"
}

//lista_escribibles ::= ...
void lista_escribibles():
{
}
{
	//RELLENADO AARON
	factor() (","(factor()))*
}

//asignacion ::= <tIDENTIFICADOR> <tOPAS> expresion ";"
void asignacion():
{
}
{
  	<tOPAS> expresion() ";"
}

//invocacion_accion ::= <tIDENTIFICADOR> argumentos ";"
void invocacion_accion():
{
}
{
	argumentos() ";"
}

//mientras_que ::= <tMQ> expresion lista_sentencias <tFMQ>
void mientras_que():
{
}
{
	<tMQ> expresion() lista_sentencias() <tFMQ>
}

//seleccion ::= ...
void seleccion():
{
}
{
	//RELLENADO AARON
	< tSI > argumentos() lista_sentencias() (< tSI_NO > lista_sentencias())? < tFSI >
}

//argumentos ::= "(" ( lista_expresiones )? ")"
void argumentos():
{
}
{
	"(" (lista_expresiones())? ")"
}

//lista_expresiones ::= ...
void lista_expresiones():
{
}
{
	//RELLENADO AARON
	(expresion())+ 
	
}

//expresion ::= ...
void expresion():
{
}
{
	expresion_simple() (operador_relacional() expresion_simple())?
}

//operador_relacional ::= ...
void operador_relacional():
{
}
{
	<tMAYOR>
|	<tMENOR>
|	<tIGUAL> 
|	<tMAI>
|	<tMEI>
|	<tNI>
}

//expresion_simple ::= ...
void expresion_simple():
{
}
{
  	// Por que no va con signo????????
  	//PORQUE EL SIGNO VA CON EL VALOR ENTERO :))))
	termino() (operador_aditivo() termino())*
}

//operador_aditivo ::= ...
/*void signo():
{
}
{
 	<tSUMA>
| 	<tRESTA> 	
}
*/
void operador_aditivo():
{
}
{
  	<tOR>
| 	<tSUMA>
| 	<tRESTA> 	
}

//termino ::= ...
void termino():
{
}
{
	factor() (operador_multiplicativo() factor())*
}

//operador_multiplicativo ::= ...
void operador_multiplicativo():
{
}
{
	<tMULT>
| 	<tDIV>
| 	<tMOD>
| 	<tAND>
}

void factor():  
{
}
{
 	<tNOT> factor()
| 	"(" expresion() ")"
| 	<tENTACAR> "(" expresion() ")"
| 	<tCARAENT> "(" expresion() ")"
| 	<tIDENTIFICADOR>
| 	<tVALOR_ENTERO>
| 	< tVALOR_DECIMAL >
| 	<tCONSTCHAR>
| 	<tCONSTCAD>
| 	<tTRUE>
| 	<tFALSE>
}
